tests/banp_test_core_ingress_udp_swapping_rules/banp_core_ingress_udp_rules.yaml
# policy reference:
# https://github.com/kundan2707/network-policy-api/blob/master/conformance/base/baseline_admin_network_policy/core-ingress-udp-rules.yaml
# swapped some rules
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  ingress:
  - name: "deny-from-ravenclaw-everything" # swapped with allow-from-ravenclaw-everything
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "allow-from-ravenclaw-everything"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-slytherin-at-port-5353"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: UDP
          port: 5353
  - name: "allow-from-gryffindor-at-port-53"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
    ports:
      - portNumber:
          protocol: UDP
          port: 53
  - name: "deny-from-gryffindor-everything-else"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
